name:                amt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgraf812/amt#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           Copyright: (c) 2018 Sebastian Graf
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sgraf812/amt

library
  hs-source-dirs:      src
  exposed-modules:     Data.AMT
  ghc-options:         -fllvm
  other-modules:       Data.HashMap.Array
  build-depends:       base >= 4.7 && < 5
                     , deepseq 
                     , transformers
  default-language:    Haskell2010

test-suite unittests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base
    , amt
    , tasty
    , tasty-hspec
    , tasty-quickcheck
  other-modules:       Data.AMT.Arbitrary
                       Data.AMT.Properties
  default-language: Haskell2010

benchmark bench
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:    bench
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Main.hs
  build-depends:     base
                   , criterion
                   , deepseq
                   , amt
                   , containers
                   , unordered-containers
                   , random, directory
